--- a/AluraStoreBr.ipynb
+++ b/AluraStoreBr.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 113,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "62de27a0-aee2-4b68-fb80-a03438e39551"
+        "outputId": "5070a01d-cbca-46c0-c06a-1e7b02f976d5"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a05c7211-53dd-425a-95a6-7f57a6c3899a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1c083daf-021e-4735-b2e9-01ca6b6891d3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a05c7211-53dd-425a-95a6-7f57a6c3899a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c083daf-021e-4735-b2e9-01ca6b6891d3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a05c7211-53dd-425a-95a6-7f57a6c3899a button.colab-df-convert');\n",
+              "        document.querySelector('#df-1c083daf-021e-4735-b2e9-01ca6b6891d3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a05c7211-53dd-425a-95a6-7f57a6c3899a');\n",
+              "        const element = document.querySelector('#df-1c083daf-021e-4735-b2e9-01ca6b6891d3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-8e6e348f-2c0a-468e-88ab-46162522aa23\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8e6e348f-2c0a-468e-88ab-46162522aa23')\"\n",
+              "    <div id=\"df-9bf7db59-29a9-4dbf-9d3a-4dfcc12c0afe\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9bf7db59-29a9-4dbf-9d3a-4dfcc12c0afe')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-8e6e348f-2c0a-468e-88ab-46162522aa23 button');\n",
+              "            document.querySelector('#df-9bf7db59-29a9-4dbf-9d3a-4dfcc12c0afe button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,11 +403,12 @@
             }
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 113
         }
       ],
       "source": [
         "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
         "url = \"https://raw.githubusercontent.com/alura-es-cursos/challenge1-data-science/refs/heads/main/base-de-dados-challenge-1/loja_1.csv\"\n",
         "url2 = \"https://raw.githubusercontent.com/alura-es-cursos/challenge1-data-science/refs/heads/main/base-de-dados-challenge-1/loja_2.csv\"\n",
@@ -433,9 +434,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
-        "outputId": "51d796e1-60ab-4fd6-a158-e9f749decdae"
+        "outputId": "cd571773-7486-44da-917b-9b99561b1763"
       },
-      "execution_count": 62,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "display_data",
@@ -484,7 +485,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5d167118-02c5-4955-877d-3a9eda842b54\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-774210ff-7cc4-46f7-a753-0c076d2b2140\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -690,7 +691,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d167118-02c5-4955-877d-3a9eda842b54')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-774210ff-7cc4-46f7-a753-0c076d2b2140')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -742,12 +743,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5d167118-02c5-4955-877d-3a9eda842b54 button.colab-df-convert');\n",
+              "        document.querySelector('#df-774210ff-7cc4-46f7-a753-0c076d2b2140 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5d167118-02c5-4955-877d-3a9eda842b54');\n",
+              "        const element = document.querySelector('#df-774210ff-7cc4-46f7-a753-0c076d2b2140');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -767,8 +768,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3e99476e-520f-4bf3-a9cc-e0b5cadbb963\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e99476e-520f-4bf3-a9cc-e0b5cadbb963')\"\n",
+              "    <div id=\"df-5bd23f80-a29f-4b28-8235-510fc429ffd6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5bd23f80-a29f-4b28-8235-510fc429ffd6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -887,14 +888,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3e99476e-520f-4bf3-a9cc-e0b5cadbb963 button');\n",
+              "            document.querySelector('#df-5bd23f80-a29f-4b28-8235-510fc429ffd6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_79df76b3-f3f6-4eab-a2e1-734cafae1321\">\n",
+              "  <div id=\"id_1559ebd3-7fd4-4bf7-9ca7-1e4f7416feac\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -938,7 +939,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_79df76b3-f3f6-4eab-a2e1-734cafae1321 button.colab-df-generate');\n",
+              "        document.querySelector('#id_1559ebd3-7fd4-4bf7-9ca7-1e4f7416feac button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -997,9 +998,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aO-Wy7YmqyNm",
-        "outputId": "3fe7621b-77eb-4055-a64e-dd364848f6d3"
+        "outputId": "744bdac4-e3f6-4fd9-8348-e9f12aee5c26"
       },
-      "execution_count": 63,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -1035,9 +1036,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7c64e21-6979-4511-987c-ca3677e6c124"
+        "outputId": "366daebd-f452-4c4b-9a1a-e2f3a313ace0"
       },
-      "execution_count": 64,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,9 +1072,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZvjNI1_jt0yv",
-        "outputId": "9c3b3578-0450-4de4-c97a-290ef0b44380"
+        "outputId": "77ae8cd2-3085-49c5-b6aa-66c0475205d0"
       },
-      "execution_count": 65,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,9 +1109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tFZqbzRot0q3",
-        "outputId": "74f6cc98-2764-4a63-d1eb-be683cd644d2"
+        "outputId": "aafcc222-8b64-494a-c6e7-cead732fe751"
       },
-      "execution_count": 66,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
@@ -1145,9 +1146,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QTbE83FWt0ed",
-        "outputId": "8ab14a8e-ac86-4a00-9a16-397f68152896"
+        "outputId": "24e3b431-ddfa-4afa-87b3-c6ccb5506eb1"
       },
-      "execution_count": 67,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
@@ -1190,9 +1191,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "05a4912b-8239-4a1b-8055-b85017fcb37a"
+        "outputId": "005b32ec-ebbb-47bc-9303-e16eadbef36b"
       },
-      "execution_count": 68,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
@@ -1215,9 +1216,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LP50UtgJuESQ",
-        "outputId": "64ac2f7b-c62b-4dea-fd46-e2b87378db7b"
+        "outputId": "97b4a5a9-5c1a-4267-881d-091cc0a39824"
       },
-      "execution_count": 69,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -1240,9 +1241,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qr18UAd8uEPH",
-        "outputId": "0d8cdd18-3a10-4a16-e332-3f9d7c9e1d4f"
+        "outputId": "ab3ca471-f56a-41ab-f83e-d8fedeb46e20"
       },
-      "execution_count": 70,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -1265,9 +1266,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00817975-ad65-40d9-821d-a288eff987e9"
+        "outputId": "2f14e430-5ab9-4600-97d2-3c3b460320b5"
       },
-      "execution_count": 71,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,9 +1303,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ade1779-6830-422b-f133-27be4d8fba95"
+        "outputId": "a40e1f88-1442-459f-a57c-79ae70ab1bb1"
       },
-      "execution_count": 72,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -1338,9 +1339,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QrcGQlYou3nc",
-        "outputId": "50f5a9a0-5ce2-4370-fc22-1035886ddb34"
+        "outputId": "8376d198-8d21-429c-82e8-965f1758c14f"
       },
-      "execution_count": 73,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -1374,9 +1375,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f0e6d85-4ac3-45a1-8e76-117f2625fc1f"
+        "outputId": "939d26f6-dbd1-41de-97e6-2c880a1b274f"
       },
-      "execution_count": 74,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
@@ -1410,9 +1411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vn_luRAmuyFL",
-        "outputId": "764b415e-809b-484c-e644-22c2dee2a400"
+        "outputId": "bd341487-8604-45e4-bfe5-eab5b45d251c"
       },
-      "execution_count": 75,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,9 +1465,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c681c813-4406-4339-cd10-d1d52d82fdae"
+        "outputId": "62260be0-d32d-4ee1-a8a9-aeb9b3ad1733"
       },
-      "execution_count": 76,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -1482,12 +1483,65 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Relatorio Final"
+      ],
+      "metadata": {
+        "id": "NcnNZx32wCc5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fretes = []\n",
+        "lojas = []\n",
+        "\n",
+        "for loja, df in dados_lojas.items():\n",
+        "    if 'Frete' in df.columns:\n",
+        "        frete_medio = df['Frete'].dropna().mean()\n",
+        "        fretes.append(frete_medio)\n",
+        "        lojas.append(loja)\n",
+        "    else:\n",
+        "        print(f\"Atenção: Loja {loja} não possui coluna 'Frete'\")\n",
+        "\n",
+        "# Só gerar o gráfico se houver dados válidos\n",
+        "if fretes:\n",
+        "    plt.figure(figsize=(8,5))\n",
+        "    plt.bar(lojas, fretes, color='lightgreen')\n",
+        "    plt.title('Média de Frete por Loja')\n",
+        "    plt.xlabel('Lojas')\n",
+        "    plt.ylabel('Frete Médio (R$)')\n",
+        "    plt.ylim(0, max(fretes)*1.2)\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print(\"Nenhuma loja possui dados de frete disponíveis.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N0Wwg7b5wM8l",
+        "outputId": "492c599d-2e82-48ab-fa1f-557bc030ce18"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nenhuma loja possui dados de frete disponíveis.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0tSdCie9ZQlt"
+        "id": "b0hpx0ejyJ14"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     }
   ]
